--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pdfkit": "^0.14.0",
     "pdfkit-table": "^0.1.99",
+    "sharp": "^0.33.1",
+    "socket.io": "^4.7.2",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
